@@ -67,8 +67,9 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2015-2017 Michal Josef Špaček
- BSD 2-Clause License
+© 2015-2017 Michal Josef Špaček
+
+BSD 2-Clause License
 
 =head1 VERSION
 
