@@ -36,8 +36,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2015-2017 Michal Josef Špaček
-     BSD 2-Clause License
+    © 2015-2017 Michal Josef Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.04
